<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".fragment.Home">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/home_header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:contentDescription="avatar"
                android:src="@drawable/avatar"
                tools:ignore="ContentDescription,HardcodedText" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/avatar"
                android:text="Hi, Nguyen Hoang Viet"
                android:textColor="@color/white"
                tools:ignore="HardcodedText">

            </TextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/noti">

            </ImageView>
        </RelativeLayout>



        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/home_header"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="24dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_marginHorizontal="24dp"
                        android:layout_marginTop="24dp"
                        app:cardCornerRadius="16dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/card"
                            android:scaleType="fitXY"
                            />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/card_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="16dp"
                                android:text="Nguyen Hoang Viet"
                                android:textColor="@color/white"
                                android:textSize="24sp">

                            </TextView>

                            <TextView
                                android:id="@+id/card_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="16dp"
                                android:text="4756 *** *** 1234"
                                android:textColor="@color/white"
                                android:textSize="18sp">

                            </TextView>

                            <TextView
                                android:id="@+id/balance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_marginStart="16dp"
                                android:layout_marginBottom="16dp"
                                android:text="$3.212.234"
                                android:textColor="@color/white"
                                android:textSize="18sp">

                            </TextView>

                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentBottom="true"
                                android:layout_marginEnd="16dp"
                                android:layout_marginBottom="16dp"
                                android:src="@drawable/logo">

                            </ImageView>
                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>




                    <GridLayout
                        android:layout_below="@+id/card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="30dp"
                        android:columnCount="3">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/transfer"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_margin="10dp"
                            app:cardBackgroundColor="@color/white"
                            app:cardCornerRadius="18dp"
                            app:cardElevation="7dp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:layout_marginTop="20dp">

                                <ImageView
                                    android:id="@+id/imageView4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:contentDescription="icon"
                                    android:src="@drawable/icon_trans"

                                    tools:ignore="HardcodedText" />

                                <TextView
                                    android:layout_marginTop="10dp"
                                    android:textAlignment="center"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/imageView4"
                                    android:layout_alignParentBottom="true"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginBottom="25dp"
                                    android:text="@string/transfer">

                                </TextView>

                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/report"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_margin="10dp"
                            app:cardBackgroundColor="@color/white"
                            app:cardCornerRadius="18dp"
                            app:cardElevation="7dp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:layout_marginTop="20dp">

                                <ImageView
                                    android:id="@+id/imageView5"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:contentDescription="icon"
                                    android:src="@drawable/trans_report"

                                    tools:ignore="HardcodedText" />

                                <TextView
                                    android:layout_marginTop="10dp"
                                    android:textAlignment="center"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/imageView5"
                                    android:layout_alignParentBottom="true"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginBottom="25dp"
                                    android:text="@string/report">

                                </TextView>

                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>


                        <androidx.cardview.widget.CardView
                            android:id="@+id/pay_bill"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_margin="10dp"
                            app:cardBackgroundColor="@color/white"
                            app:cardCornerRadius="18dp"
                            app:cardElevation="7dp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:layout_marginTop="20dp">

                                <ImageView
                                    android:id="@+id/imageView6"
                                    android:layout_width="32dp"
                                    android:layout_height="32dp"
                                    android:layout_centerHorizontal="true"
                                    android:contentDescription="icon"
                                    android:src="@drawable/pay_bill"

                                    tools:ignore="HardcodedText" />

                                <TextView
                                    android:layout_marginTop="10dp"
                                    android:textAlignment="center"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/imageView6"
                                    android:layout_alignParentBottom="true"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginBottom="25dp"
                                    android:text="@string/pay_bill">

                                </TextView>

                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/exchange"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_margin="10dp"
                            app:cardBackgroundColor="@color/white"
                            app:cardCornerRadius="18dp"
                            app:cardElevation="7dp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:layout_marginTop="20dp">

                                <ImageView
                                    android:id="@+id/imageView7"
                                    android:layout_width="32dp"
                                    android:layout_height="32dp"
                                    android:layout_centerHorizontal="true"
                                    android:contentDescription="icon"
                                    android:src="@drawable/exchange"

                                    tools:ignore="HardcodedText" />

                                <TextView
                                    android:layout_marginTop="10dp"
                                    android:textAlignment="center"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/imageView7"
                                    android:layout_alignParentBottom="true"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginBottom="25dp"
                                    android:text="@string/exchange">

                                </TextView>

                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>







                    </GridLayout>




                </RelativeLayout>

            </ScrollView>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>


</FrameLayout>