<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="18dp"
    tools:context=".activities.ConfirmTransfer">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-28dp"
        android:background="@color/transparent"
        android:drawableLeft="@drawable/arrow_back_black"
        android:text="@string/confirm"
        android:textColor="#333"
        android:textSize="20sp">

    </Button>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back_button"
        android:text="Confirm transaction information"
        android:textColor="@color/gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView7"
        android:layout_marginVertical="16dp"


        >

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/from"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/accent"
                app:boxStrokeErrorColor="@color/primary"
                app:cursorColor="@color/accent"
                app:cursorErrorColor="@color/primary"
                app:errorEnabled="true"
                app:errorTextColor="@color/primary"
                app:hintTextColor="@color/accent">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="From"
                    android:inputType="text"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/accent"
                app:boxStrokeErrorColor="@color/primary"
                app:cursorColor="@color/accent"
                app:cursorErrorColor="@color/primary"
                app:errorEnabled="true"
                android:enabled="false"

                app:errorTextColor="@color/primary"
                app:hintTextColor="@color/accent">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="To"
                    android:inputType="text"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/accent"
                app:boxStrokeErrorColor="@color/primary"
                app:cursorColor="@color/accent"
                app:cursorErrorColor="@color/primary"
                app:errorEnabled="true"
                android:enabled="false"

                app:errorTextColor="@color/primary"
                app:hintTextColor="@color/accent">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Beneficiary bank"
                    android:inputType="text"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/accent"
                app:boxStrokeErrorColor="@color/primary"
                app:cursorColor="@color/accent"
                app:cursorErrorColor="@color/primary"
                app:errorEnabled="true"
                android:enabled="false"

                app:errorTextColor="@color/primary"
                app:hintTextColor="@color/accent">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Card number receiver"
                    android:inputType="text"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/accent"
                app:boxStrokeErrorColor="@color/primary"
                app:cursorColor="@color/accent"
                app:cursorErrorColor="@color/primary"
                app:errorEnabled="true"
                android:enabled="false"

                app:errorTextColor="@color/primary"
                app:hintTextColor="@color/accent">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Transition fee"
                    android:inputType="text"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/accent"
                app:boxStrokeErrorColor="@color/primary"
                app:cursorColor="@color/accent"
                app:cursorErrorColor="@color/primary"
                app:errorEnabled="true"
                app:errorTextColor="@color/primary"
                android:enabled="false"

                app:hintTextColor="@color/accent">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/content"
                    android:inputType="text"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/accent"
                app:boxStrokeErrorColor="@color/primary"
                app:cursorColor="@color/accent"
                app:cursorErrorColor="@color/primary"
                app:errorEnabled="true"
                app:errorTextColor="@color/primary"
                android:enabled="false"

                app:hintTextColor="@color/accent">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/amount"
                    android:inputType="text"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="18dp"
                    android:layout_weight="1"
                    android:focusableInTouchMode="true"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/accent"
                    app:boxStrokeErrorColor="@color/primary"
                    app:cursorColor="@color/accent"
                    app:cursorErrorColor="@color/primary"
                    app:errorTextColor="@color/primary"
                    app:hintTextColor="@color/accent">

                    <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="OTP"
                        android:inputType="numberPassword"
                        tools:ignore="HardcodedText" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/otp_btn"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginBottom="-2dp"
                    android:text="Get OTP">

                </Button>

            </LinearLayout>

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:enabled="false"
                android:layout_marginTop="22dp"
                >

            </Button>


        </LinearLayout>

    </ScrollView>



</RelativeLayout>